--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-libfprint (1:0.6.0-2) unstable; urgency=low
+libfprint (1:0.6.0-2gxde1) unstable; urgency=low
 
-  * Upload to unstable
-  * Add simple gbp.conf to help with releasing
+  * Support Termux PRoot
 
- -- Didier Raboud <odyx@debian.org>  Sun, 03 May 2015 15:19:19 +0200
+ -- shenmo <shenmo@spark-app.store>  Sun, 03 May 2015 15:19:19 +0200
 
 libfprint (1:0.6.0-1) experimental; urgency=medium
 
